# imu-joint-angle-methods-supplement

./: .gitignore  LICENSE  README.md  constants.py  create_comparison_figure.py  download_simtk_dataset.py  generate_vqf_opensim.py  offsets.json  pyproject.toml  run_estimation.py  utils.py
methods/: __init__.py  vqf_olsson.py  weygers.py
results/: ankle_rmse_summary.csv  knee_rmse_summary.csv
