[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-imu-est-comparison"
version = "0.1.0"
description = "Multi-IMU joint angle estimation comparison"
authors = [{ name = "Daniel Weber", email = "daniel.om.weber@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy==2.0.2",
    "pandas==3.0.1",
    "scipy==1.17.1",
    "matplotlib==3.10.8",
    "tqdm==4.67.3",
    "requests==2.32.5",
    "qmt==0.2.4",
    "dfjimu==0.2.1",
]

[tool.setuptools]
py-modules = []
